<resources>
    <string name="app_name">inskribe</string>
    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage</string>
    <string name="search">Search your notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_description">Testing this thing..</string>
    <string name="tv_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_todo_hint">e.g., Eat less at dinner</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="about_text">Todoist Clone App - by BAWP - version 0.1</string>
    <string name="add_todos">Add a Todo...</string>
</resources>