<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wildSand"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="25sp"
    android:text="Create Task"
    android:fontFamily="@font/gadugi_bold"
    android:id="@+id/txtCreateTask"
    android:textColor="@color/black"
    android:layout_marginTop="5dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Task Title"
        android:fontFamily="@font/gadugi_bold"
        android:id="@+id/txtTaskTitle"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtCreateTask"/>
    <EditText
        android:id="@+id/enter_todo_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_todo_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/hintColor"
        android:padding="@dimen/dimen_16"
        android:background="@drawable/search_background"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskTitle"  />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/priority_todo_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/wildSand"
        app:fabCustomSize="50dp"
        android:elevation="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/flag_icon"
        android:contentDescription="@string/image_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_todo_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/wildSand"
        app:fabCustomSize="50dp"
        android:elevation="15dp"
        android:layout_marginTop="12dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/priority_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/tick_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/today_calendar_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/wildSand"
        app:fabCustomSize="50dp"
        android:elevation="15dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_description"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/cal_icon" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tomorrow_chip"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:text="@string/tomorrow"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:chipBackgroundColor="@color/VintageWhiteDark"
        app:chipIcon="@drawable/ic_baseline_wb_sunny_24"
        app:layout_constraintEnd_toEndOf="@+id/next_week_chip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/next_week_chip"
        app:layout_constraintTop_toBottomOf="@+id/today_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/next_week_chip"
        android:layout_width="272dp"
        android:layout_height="41dp"
        app:chipBackgroundColor="@color/VintageWhiteDark"
        android:textColor="@color/black"
        android:text="@string/next_week"
        android:layout_marginTop="10dp"
        app:chipIcon="@drawable/ic_baseline_next_week_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/today_chip"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/today"
        android:textColor="@color/black"
        app:chipBackgroundColor="@color/VintageWhiteDark"
        app:chipIcon="@drawable/ic_baseline_today_24"
        app:layout_constraintEnd_toEndOf="@+id/tomorrow_chip"
        app:layout_constraintStart_toStartOf="@+id/tomorrow_chip"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        android:text="Select Date"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gadugi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="318dp"
        android:layout_height="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_week_chip"
        app:layout_constraintVertical_bias="0.16000003" />

    <RadioGroup
        android:id="@+id/radioGroup_priority"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button">

        <RadioButton
            android:id="@+id/radioButton_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C91517"
            android:text="@string/radio_high" />

        <RadioButton
            android:id="@+id/radioButton_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFB300"
            android:text="@string/radio_med" />

        <RadioButton
            android:id="@+id/radioButton_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/radio_low" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar_view,next_week_chip,tomorrow_chip,today_chip,textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>