<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wildSand"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCreateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Create Note"
        android:layout_marginTop="42dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/gadugi_bold"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateNote"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateNote"
        app:tint="@color/black" />


    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="@font/gadugi_bold"
        android:hint="Note Title"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />


    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/gadugi_normal"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateTime">


        <View
            android:id="@+id/colorView"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:background="@color/blackStart" />

        <EditText
            android:id="@+id/etNoteSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="3dp"
            android:ellipsize="end"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/gadugi_normal"
            android:hint="Notes subtitle"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">



        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        android:background="@drawable/search_background"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:elevation="10dp"
        android:visibility="gone"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etWebLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/gadugi_normal"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:text="http://"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/_12ssp" />
            <ImageView
                android:id="@+id/imgUrlDelete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_cancel_24" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/gadugi_bold"
                android:background="@drawable/background"
                android:text="@string/cancel"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/textColorWhite"
                android:id="@+id/btnCancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/gadugi_bold"
                android:background="@drawable/background"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/textColorWhite"
                android:id="@+id/btnOk"/>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:visibility="gone"
        android:fontFamily="@font/gadugi_bold"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/_12ssp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

    <EditText
        android:id="@+id/etNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:fontFamily="@font/gadugi_normal"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWebLink" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/img_bar"
            app:tint="@color/black" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>